test: added tests for DeserializeFromExcel, VerifyJsonPoolConfig

--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance.SnapshotCreator.Tests/ConsumerApi.Tests.Performance.SnapshotCreator.Tests.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance.SnapshotCreator.Tests/ConsumerApi.Tests.Performance.SnapshotCreator.Tests.csproj
@@ -30,10 +30,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConsumerApi.Tests.Performance\tools\snapshot-creator-v2\ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
@@ -47,6 +43,13 @@
     <None Update="TestData\pool-config.test.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\PerformanceTestData.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ConsumerApi.Tests.Performance\tools\snapshot-creator-v2\ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj" />
   </ItemGroup>
 
 </Project>
