--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
@@ -22,6 +22,9 @@
       <None Update="Config\pool-config.test.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Config\PerformanceTestData.xlsx">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
