--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,4 +11,27 @@
 
         <MetalamaLicense>112591-ZU658QQQXEAETFQCB88YNBFRY2EWBBJFF4JX3YHRW87WNTFR46ULX7HRZDATQASR28MWN7JFS6ZTZ9QGMJHBKCL4GUAFN7768NAMQ6K8V4R3EWTHJP6A6EKXC46SYPT5TMW9QQGD9AZSNSQQBU9RGDWQHEQKPZUXVDVKBJKP</MetalamaLicense>
     </PropertyGroup>
+
+    <Target Name="GetGitRoot" BeforeTargets="BeforeBuild">
+        <Exec Command="git rev-parse --show-toplevel" ConsoleToMsBuild="true">
+            <Output TaskParameter="ConsoleOutput" PropertyName="GitRootDirectory" />
+        </Exec>
+        <ItemGroup Condition="$(MSBuildProjectName.EndsWith('Tests'))">
+            <ProjectReference Include="$(GitRootDirectory)\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
+        </ItemGroup>
+    </Target>
+
+    <ItemGroup Condition="$(MSBuildProjectName.EndsWith('Tests'))">
+        <PackageReference Include="FluentAssertions" Version="6.12.1" />
+        <Using Include="FluentAssertions" />
+
+        <Using Include="Backbone.UnitTestTools.Data.TestDataGenerator" Static="True" />
+
+        <Using Include="Xunit" />
+
+        <PackageReference Include="GitHubActionsTestLogger" Version="2.4.1">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+    </ItemGroup>
 </Project>
