--- a/Modules/Devices/test/Devices.Domain.Tests/Devices.Domain.Tests.csproj
+++ b/Modules/Devices/test/Devices.Domain.Tests/Devices.Domain.Tests.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
         <ProjectReference Include="..\..\src\Devices.Domain\Devices.Domain.csproj" />
     </ItemGroup>
 </Project>
