--- a/appsettings.override.json
+++ b/appsettings.override.json
@@ -159,7 +159,7 @@
                                         },
                                         "children": [
                                             {
-                                                "tag": "Zeugnis",
+                                                "tag": "zeugnis",
                                                 "displayNames": {
                                                     "de": "Zeugnis",
                                                     "en": "Diploma"
