--- a/.ci/appsettings.override.sqlserver.docker.json
+++ b/.ci/appsettings.override.sqlserver.docker.json
@@ -95,6 +95,89 @@
                 }
             }
         },
+        "Tags": {
+            "Application": {
+                "Attributes": [
+                    {
+                        "name": "IdentityFileReference",
+                        "tags": [
+                            {
+                                "tag": "schulabschluss",
+                                "displayNames": {
+                                    "en": "Degree",
+                                    "de": "Abschluss"
+                                },
+                                "children": [
+                                    {
+                                        "tag": "realschule",
+                                        "displayNames": {
+                                            "de": "Realschule",
+                                            "en": "Secondary School"
+                                        },
+                                        "children": [
+                                            {
+                                                "tag": "zeugnis",
+                                                "displayNames": {
+                                                    "de": "Zeugnis",
+                                                    "en": "Diploma"
+                                                }
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "tag": "gymnasium",
+                                        "displayNames": {
+                                            "de": "Gymnasium",
+                                            "en": "High School"
+                                        },
+                                        "children": [
+                                            {
+                                                "tag": "zeugnis",
+                                                "displayNames": {
+                                                    "de": "Zeugnis",
+                                                    "en": "Diploma"
+                                                }
+                                            }
+                                        ]
+                                    }
+                                ]
+                            }
+                        ]
+                    },
+                    {
+                        "name": "PhoneNumber",
+                        "tags": [
+                            {
+                                "tag": "notfall",
+                                "displayNames": {
+                                    "de": "Notfallkontakt",
+                                    "en": "Emergency Contact"
+                                }
+                            }
+                        ]
+                    },
+                    {
+                        "name": "StreetAddress",
+                        "tags": [
+                            {
+                                "tag": "lieferung",
+                                "displayNames": {
+                                    "de": "Lieferadresse",
+                                    "en": "Delivery Address"
+                                }
+                            },
+                            {
+                                "tag": "heimat",
+                                "displayNames": {
+                                    "de": "Heimatadresse",
+                                    "en": "Home Address"
+                                }
+                            }
+                        ]
+                    }
+                ]
+            }
+        },
         "Tokens": {
             "Infrastructure": {
                 "SqlDatabase": {
