feat: Generate Relationships Excel (RelationshipsAndMessagePoolConfigs.<worksheet-name>.xlsx)

--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
@@ -31,4 +31,9 @@
       <PackageReference Include="ExcelMapper" Version="5.2.592" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Enums\" />
+      <Folder Include="Constants\" />
+    </ItemGroup>
+
 </Project>
