--- a/Modules/Tags/src/Tags.ConsumerApi/Tags.ConsumerApi.csproj
+++ b/Modules/Tags/src/Tags.ConsumerApi/Tags.ConsumerApi.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
-        <ProjectReference Include="..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj" />
+        <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj" />
         <ProjectReference Include="..\Tags.Application\Tags.Application.csproj" />
     </ItemGroup>
 
