--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance.SnapshotCreator.Tests/ConsumerApi.Tests.Performance.SnapshotCreator.Tests.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance.SnapshotCreator.Tests/ConsumerApi.Tests.Performance.SnapshotCreator.Tests.csproj
@@ -34,6 +34,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="TestData\ExpectedRelationshipsAndMessagePoolConfigs.test.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\PerformanceTestData-plusNewMedium.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
