--- a/Modules/Announcements/src/Announcements.Application/Announcements.Application.csproj
+++ b/Modules/Announcements/src/Announcements.Application/Announcements.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\Announcements.Domain\Announcements.Domain.csproj" />
   </ItemGroup>
 
 </Project>
