refactor: Move TagInfo into Domain project, use ITagsRepository instead of TagProvider

--- a/Modules/Tags/src/Tags.Application/Tags.Application.csproj
+++ b/Modules/Tags/src/Tags.Application/Tags.Application.csproj
@@ -2,5 +2,6 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Application.Abstractions\BuildingBlocks.Application.Abstractions.csproj" />
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Application\BuildingBlocks.Application.csproj" />
+        <ProjectReference Include="..\Tags.Domain\Tags.Domain.csproj" />
     </ItemGroup>
 </Project>
