--- a/Modules/Tags/src/Tags.ConsumerApi/Tags.ConsumerApi.csproj
+++ b/Modules/Tags/src/Tags.ConsumerApi/Tags.ConsumerApi.csproj
@@ -2,6 +2,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj" />
         <ProjectReference Include="..\Tags.Application\Tags.Application.csproj" />
+        <ProjectReference Include="..\Tags.Infrastructure\Tags.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
