refactor: Implement current structure in appsettings json files

--- a/appsettings.override.json
+++ b/appsettings.override.json
@@ -124,85 +124,72 @@
         },
         "Tags": {
             "Application": {
-                "Attributes": [
-                    {
-                        "name": "IdentityFileReference",
-                        "tags": [
-                            {
-                                "tag": "schulabschluss",
-                                "displayNames": {
-                                    "en": "Degree",
-                                    "de": "Abschluss"
-                                },
-                                "children": [
-                                    {
-                                        "tag": "realschule",
-                                        "displayNames": {
-                                            "de": "Realschule",
-                                            "en": "Secondary School"
-                                        },
-                                        "children": [
-                                            {
-                                                "tag": "zeugnis",
-                                                "displayNames": {
-                                                    "de": "Zeugnis",
-                                                    "en": "Diploma"
-                                                }
-                                            }
-                                        ]
-                                    },
-                                    {
-                                        "tag": "gymnasium",
-                                        "displayNames": {
-                                            "de": "Gymnasium",
-                                            "en": "High School"
-                                        },
-                                        "children": [
-                                            {
-                                                "tag": "zeugnis",
-                                                "displayNames": {
-                                                    "de": "Zeugnis",
-                                                    "en": "Diploma"
-                                                }
-                                            }
-                                        ]
-                                    }
-                                ]
-                            }
-                        ]
-                    },
-                    {
-                        "name": "PhoneNumber",
-                        "tags": [
-                            {
-                                "tag": "notfall",
-                                "displayNames": {
-                                    "de": "Notfallkontakt",
-                                    "en": "Emergency Contact"
-                                }
-                            }
-                        ]
-                    },
-                    {
-                        "name": "StreetAddress",
-                        "tags": [
-                            {
-                                "tag": "lieferung",
-                                "displayNames": {
-                                    "de": "Lieferadresse",
-                                    "en": "Delivery Address"
-                                }
+                "SupportedLanguages": [
+                    "de",
+                    "en"
+                ],
+                "TagsForAttributeValueTypes": {
+                    "IdentityFileReference": {
+                        "schulabschluss": {
+                            "displayNames": {
+                                "de": "Abschluss",
+                                "en": "Degree"
                             },
-                            {
-                                "tag": "heimat",
-                                "displayNames": {
-                                    "de": "Heimatadresse",
-                                    "en": "Home Address"
+                            "children": {
+                                "realschule": {
+                                    "displayNames": {
+                                        "de": "Realschule",
+                                        "en": "Secondary School"
+                                    },
+                                    "children": {
+                                        "zeugnis": {
+                                            "displayNames": {
+                                                "de": "Zeugnis",
+                                                "en": "Diploma"
+                                            }
+                                        }
+                                    }
+                                },
+                                "gymnasium": {
+                                    "displayNames": {
+                                        "de": "Gymnasium",
+                                        "en": "High School"
+                                    },
+                                    "children": {
+                                        "zeugnis": {
+                                            "displayNames": {
+                                                "de": "Zeugnis",
+                                                "en": "Diploma"
+                                            }
+                                        }
+                                    }
                                 }
                             }
-                        ]
+                        }
+                    },
+                    "PhoneNumber": {
+                        "notfall": {
+                            "displayNames": {
+                                "de": "Notfallkontakt",
+                                "en": "Emergency Contact"
+                            }
+                        }
+                    },
+                    "StreetAddress": {
+                        "lieferung": {
+                            "displayNames": {
+                                "de": "Lieferadresse",
+                                "en": "Deliver Address"
+                            }
+                        },
+                        "heimat": {
+                            "displayNames": {
+                                "de": "Heimatadresse",
+                                "en": "Home Address"
+                            }
+                        }
                     }
-                ]
+                }
             }
         },
         "Tokens": {
