--- a/Modules/Announcements/src/Announcements.Infrastructure/Announcements.Infrastructure.csproj
+++ b/Modules/Announcements/src/Announcements.Infrastructure/Announcements.Infrastructure.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Persistence\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
+    <ProjectReference Include="..\Announcements.Application\Announcements.Application.csproj" />
+    <ProjectReference Include="..\Announcements.Domain\Announcements.Domain.csproj" />
   </ItemGroup>
 
 </Project>
