--- a/BuildingBlocks/src/BuildingBlocks.Application/BuildingBlocks.Application.csproj
+++ b/BuildingBlocks/src/BuildingBlocks.Application/BuildingBlocks.Application.csproj
@@ -4,6 +4,7 @@
         <PackageReference Include="FluentValidation" Version="11.10.0" />
         <PackageReference Include="MediatR" Version="12.4.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+        <PackageReference Include="ReHackt.Extensions.Options.Validation" Version="8.0.3" />
     </ItemGroup>
 
 
