--- a/Backbone.Tests.ArchUnit/Backbone.Tests.ArchUnit.csproj
+++ b/Backbone.Tests.ArchUnit/Backbone.Tests.ArchUnit.csproj
@@ -21,6 +21,18 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Applications\AdminApi\src\AdminApi.Infrastructure.Database.Postgres\AdminApi.Infrastructure.Database.Postgres.csproj" />
+        <ProjectReference Include="..\Applications\AdminApi\src\AdminApi.Infrastructure.Database.SqlServer\AdminApi.Infrastructure.Database.SqlServer.csproj" />
+        <ProjectReference Include="..\Applications\AdminApi\src\AdminApi.Infrastructure\AdminApi.Infrastructure.csproj" />
+        <ProjectReference Include="..\Applications\AdminApi\src\AdminApi\AdminApi.csproj" />
+        <ProjectReference Include="..\Applications\AdminCli\src\AdminCli\AdminCli.csproj" />
+        <ProjectReference Include="..\Applications\DatabaseMigrator\src\DatabaseMigrator\DatabaseMigrator.csproj" />
+        <ProjectReference Include="..\Applications\DatabaseMigrator\test\DatabaseMigrator.Tests\DatabaseMigrator.Tests.csproj" />
+        <ProjectReference Include="..\Applications\HealthCheck\src\HealthCheck.csproj" />
+        <ProjectReference Include="..\Applications\IdentityDeletionJobs\test\Job.IdentityDeletion.Tests.Integration\Job.IdentityDeletion.Tests.Integration.csproj" />
+        <ProjectReference Include="..\Applications\SseServer\src\SseServer\SseServer.csproj" />
+        <ProjectReference Include="..\Applications\SseServer\test\SseServerTests\SseServerTests.csproj" />
+        <ProjectReference Include="..\BuildingBlocks\src\BuildingBlocks.SDK\BuildingBlocks.SDK.csproj" />
         <ProjectReference Include="..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
         <ProjectReference Include="..\BuildingBlocks\test\BuildingBlocks.Application.Tests\BuildingBlocks.Application.Tests.csproj" />
         <ProjectReference Include="..\BuildingBlocks\test\BuildingBlocks.Infrastructure.Tests\BuildingBlocks.Infrastructure.Tests.csproj" />
@@ -30,12 +42,15 @@
         <ProjectReference Include="..\Applications\ConsumerApi\src\ConsumerApi.csproj" />
         <ProjectReference Include="..\Applications\EventHandlerService\test\EventHandlerService.Tests\EventHandlerService.Tests.csproj" />
         <ProjectReference Include="..\Applications\IdentityDeletionJobs\test\Job.IdentityDeletion.Tests\Job.IdentityDeletion.Tests.csproj" />
+        <ProjectReference Include="..\Modules\Challenges\src\Challenges.Jobs.Cleanup\Challenges.Jobs.Cleanup.csproj" />
+        <ProjectReference Include="..\Modules\Challenges\test\Challenges.Application.Tests\Challenges.Application.Tests.csproj" />
         <ProjectReference Include="..\Modules\Devices\test\Devices.Application.Tests\Devices.Application.Tests.csproj" />
         <ProjectReference Include="..\Modules\Devices\test\Devices.Domain.Tests\Devices.Domain.Tests.csproj" />
         <ProjectReference Include="..\Modules\Devices\test\Devices.Infrastructure.Tests\Devices.Infrastructure.Tests.csproj" />
         <ProjectReference Include="..\Modules\Files\test\Files.Application.Tests\Files.Application.Tests.csproj" />
         <ProjectReference Include="..\Modules\Files\test\Files.Infrastructure.Tests\Files.Infrastructure.Tests.csproj" />
         <ProjectReference Include="..\Applications\FilesSanityCheck\test\Files.Jobs.SanityCheck.Tests\FilesSanityCheck.Tests.csproj" />
+        <ProjectReference Include="..\Modules\Messages\src\Messages.Common\Messages.Common.csproj" />
         <ProjectReference Include="..\Modules\Messages\test\Messages.Application.Tests\Messages.Application.Tests.csproj" />
         <ProjectReference Include="..\Modules\Messages\test\Messages.Domain.Tests\Messages.Domain.Tests.csproj" />
         <ProjectReference Include="..\Modules\Quotas\test\Quotas.Application.Tests\Quotas.Application.Tests.csproj" />
@@ -44,5 +59,6 @@
         <ProjectReference Include="..\Modules\Synchronization\test\Synchronization.Application.Tests\Synchronization.Application.Tests.csproj" />
         <ProjectReference Include="..\Modules\Synchronization\test\Synchronization.Domain.Tests\Synchronization.Domain.Tests.csproj" />
         <ProjectReference Include="..\Modules\Tokens\test\Tokens.Application.Tests\Tokens.Application.Tests.csproj" />
+        <ProjectReference Include="..\Modules\Tokens\test\Tokens.Domain.Tests\Tokens.Domain.Tests.csproj" />
     </ItemGroup>
 </Project>
