--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
@@ -13,6 +13,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Update="Config\PerformanceTestData-plusNewMedium.xlsx">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
         <None Update="Config\pool-config.heavy.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
@@ -29,6 +32,14 @@
 
     <ItemGroup>
         <PackageReference Include="ExcelMapper" Version="5.2.592" />
+        <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.1" />
+        <PackageReference Include="McMaster.Extensions.Hosting.CommandLine" Version="4.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Commands\" />
+      <Folder Include="Readers\" />
     </ItemGroup>
 
 </Project>
