Consumer Api: Add get Tags endpoint (#917)
* feat: Add Tags Module

* feat: Add Module class, configuration and Tag Provider service

* feat: Add Tags Module to Consumer Api

* feat: Add Tags controller and basic GET /Tags endpoint

* chore: Make Tag title optional

* chore: Add custom Json converter for the List Tags response to prevent camel case

* feat: Add bruno file for GET /Tags endpoint

* refactor: Rewrite ListTagsResponse Writer to reflect current specification

* refactor: Add validators for options

* refactor: Rewrite response to match current specification

* feat: Add Tags module and GET /Tags endpoint to the Consumer Api Sdk

* feat: Add integration test for the GET /Tags endpoint

* chore: Add test attribute data

* chore: Typo

* chore: Add Tag infos to other appsettings.override files

* chore: Move Tags projects into correct folder

* chore: Minor fixes, typos and formatting

* chore: Let Tags controller authorize the clients, but allow anonymous access for the GET /Tags endpoint

* refactor: Move TagInfo into Domain project, use ITagsRepository instead of TagProvider

* refactor: Remove custom json serializer

* feat: Use custom validation for tags

* refactor: Implement current structure in appsettings json files

* feat: Add validation for language codes

* chore: Add custom json converter again to prevent camel case conversion

* refactor: use PascalCaseDictionaryConverter

---------

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Timo Notheisen <timo.notheisen@js-soft.com>

--- a/appsettings.override.json
+++ b/appsettings.override.json
@@ -122,6 +122,76 @@
                 }
             }
         },
+        "Tags": {
+            "Application": {
+                "SupportedLanguages": [
+                    "de",
+                    "en"
+                ],
+                "TagsForAttributeValueTypes": {
+                    "IdentityFileReference": {
+                        "schulabschluss": {
+                            "displayNames": {
+                                "de": "Abschluss",
+                                "en": "Degree"
+                            },
+                            "children": {
+                                "realschule": {
+                                    "displayNames": {
+                                        "de": "Realschule",
+                                        "en": "Secondary School"
+                                    },
+                                    "children": {
+                                        "zeugnis": {
+                                            "displayNames": {
+                                                "de": "Zeugnis",
+                                                "en": "Diploma"
+                                            }
+                                        }
+                                    }
+                                },
+                                "gymnasium": {
+                                    "displayNames": {
+                                        "de": "Gymnasium",
+                                        "en": "High School"
+                                    },
+                                    "children": {
+                                        "zeugnis": {
+                                            "displayNames": {
+                                                "de": "Zeugnis",
+                                                "en": "Diploma"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "PhoneNumber": {
+                        "notfall": {
+                            "displayNames": {
+                                "de": "Notfallkontakt",
+                                "en": "Emergency Contact"
+                            }
+                        }
+                    },
+                    "StreetAddress": {
+                        "lieferung": {
+                            "displayNames": {
+                                "de": "Lieferadresse",
+                                "en": "Deliver Address"
+                            }
+                        },
+                        "heimat": {
+                            "displayNames": {
+                                "de": "Heimatadresse",
+                                "en": "Home Address"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "Tokens": {
             "Infrastructure": {
                 "SqlDatabase": {
