feat: add CreateIdentities and some refactorings (mostly rename)

--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
@@ -37,7 +37,16 @@
         <PackageReference Include="ExcelMapper" Version="5.2.592" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.1" />
         <PackageReference Include="McMaster.Extensions.Hosting.CommandLine" Version="4.1.1" />
+        <PackageReference Include="MediatR" Version="12.4.1" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Features\Create\Mediator\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\..\..\..\Sdks\ConsumerApi.Sdk\src\ConsumerApi.Sdk.csproj" />
     </ItemGroup>
 
 </Project>
