feat: add possibility to create and list announcements in admin api

--- a/Modules/Announcements/src/Announcements.Application/Announcements.Application.csproj
+++ b/Modules/Announcements/src/Announcements.Application/Announcements.Application.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Application\BuildingBlocks.Application.csproj" />
     <ProjectReference Include="..\Announcements.Domain\Announcements.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
   </ItemGroup>
 
 </Project>
