--- a/Modules/Announcements/src/Announcements.Domain/Announcements.Domain.csproj
+++ b/Modules/Announcements/src/Announcements.Domain/Announcements.Domain.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Domain\BuildingBlocks.Domain.csproj" />
   </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="CSharpFunctionalExtensions" Version="3.1.0" />
+    </ItemGroup>
+
 </Project>
