refactor: create snapshot handler (part II)

--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
@@ -12,6 +12,15 @@
       <Compile Remove="Docs\**" />
       <EmbeddedResource Remove="Docs\**" />
       <None Remove="Docs\**" />
+      <None Update="Config\PoolConfig-TEST.20241114-081045\pool-config.test.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Config\PoolConfig-TEST.20241114-081045\relationships.test.xlsx">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Config\PoolConfig-TEST.20241114-081045\pool-config.test.xlsx">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
