--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
@@ -21,6 +21,15 @@
         <None Update="Config\PoolConfig-TEST.20241114-081045\pool-config.test.xlsx">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Config\PoolConfig-TEST\pool-config.test.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Config\PoolConfig-TEST\pool-config.test.xlsx">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Config\PoolConfig-TEST\relationships.test.xlsx">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
