chore: fix chiseled images

--- a/Applications/SseServer/src/SseServer/Dockerfile
+++ b/Applications/SseServer/src/SseServer/Dockerfile
@@ -19,11 +19,11 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=chisel /opt/chisel/chisel /usr/bin/
-COPY --from=mcr.microsoft.com/dotnet/nightly/runtime:9.0-noble-chiseled / /runtime-ref
+COPY --from=mcr.microsoft.com/dotnet/runtime:9.0-noble-chiseled / /runtime-ref
 
 RUN mkdir /rootfs \
-    && chisel cut --release "ubuntu-22.04" --root /rootfs \
-    libicu70_libs \
+    && chisel cut --release "ubuntu-24.04" --root /rootfs \
+    libicu74_libs \
     \
     # Remove duplicates from rootfs that exist in runtime-ref
     && fdupes /runtime-ref /rootfs -rdpN \
